welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:9: error: ')' expected but '=>' found.
                                             case (_,_,(ab-10) => return 5
                                                               ^